--- a/bm-sys-frontend/src/app/app.component.html
+++ b/bm-sys-frontend/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-nav></app-nav>
-<router-outlet></router-outlet>
+<div class="wrapper">
+    <div class="main-container">
+      <router-outlet></router-outlet>
+    </div>
+</div>
