add ep, add new route and components, add query to db

--- a/bm-sys-frontend/src/app/components/nav/nav.component.scss
+++ b/bm-sys-frontend/src/app/components/nav/nav.component.scss
@@ -6,6 +6,10 @@
   align-items: center;
   background: lightsteelblue;
 
+  .app-title {
+    cursor: pointer;
+  }
+
   .button-color {
     margin-right:10px;
     background: linen;
