--- a/bm-sys-frontend/src/app/pages/add-order/add-order.component.html
+++ b/bm-sys-frontend/src/app/pages/add-order/add-order.component.html
@@ -1,4 +1,4 @@
-<div class="example-container">
+<div class="container">
   <form [formGroup]="orderForm" (ngSubmit)="onSubmit()">
     <div class="form-content">
       <div class="form-child">
