--- a/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.html
+++ b/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="container">
   <ng-container *ngIf="orderData">
     <div class="child-item">
       <div class="order-title"> {{orderData.title}}</div>
