--- a/bm-sys-frontend/src/app/pages/client-special-offers/client-special-offers.component.scss
+++ b/bm-sys-frontend/src/app/pages/client-special-offers/client-special-offers.component.scss
@@ -1,16 +1,18 @@
 .container {
-  padding:20px;
+  padding: 20px;
 
   .child-item {
     display: flex;
     padding: 10px;
-
-    .order-title {
-      width: 150px;
-    }
   }
 
   .child-form-container {
     display: flex;
   }
+
+
+  .info-box {
+    margin-top: 30px;
+  }
 }
+
