--- a/bm-sys-frontend/src/styles.scss
+++ b/bm-sys-frontend/src/styles.scss
@@ -2,3 +2,19 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+table.mat-table {
+  display: table;
+  width: 100%;
+}
+
+
+mat-dialog-container#modal-component {
+  border: 3px solid #262626;
+  border-radius: 11px;
+  background-color: lightgray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
