--- a/bm-sys-frontend/src/app/pages/order-history/order-history.component.html
+++ b/bm-sys-frontend/src/app/pages/order-history/order-history.component.html
@@ -1,8 +1,7 @@
 <div class="wrapper">
-  <ul>
-    <li *ngFor="let item of orderHistory" class="child" [routerLink]="['/edit-order', item['id']]">
+    <div *ngFor="let item of orderHistory" class="child" [routerLink]="['/edit-order', item['id']]">
       <div class="title">{{item.title}} </div>
+      <div class="status">{{item.order_number}} </div>
       <div class="status">{{item.status}} </div>
-    </li>
-  </ul>
+    </div>
 </div>
