--- a/bm-sys-frontend/src/app/pages/ordered-items/ordered-items.component.scss
+++ b/bm-sys-frontend/src/app/pages/ordered-items/ordered-items.component.scss
@@ -1,8 +1,5 @@
 .child {
   display: flex;
-  width:300px;
-
-  .title {
-    width: 150px;
-  }
+  justify-content: space-between;
+  padding:10px
 }
