--- a/bm-sys-frontend/src/app/pages/ordered-items/ordered-items.component.html
+++ b/bm-sys-frontend/src/app/pages/ordered-items/ordered-items.component.html
@@ -1,8 +1,9 @@
 <div class="wrapper">
-  <ul>
-    <li *ngFor="let item of orderedItemsList" class="child">
+    <div *ngFor="let item of orderedItemsList" class="child">
+      <div class="title">{{clientListMap[item.client_id].client_name}} </div>
       <div class="title">{{item.product_name}} </div>
+      <div class="title">{{item.order_amount}} </div>
+      <div class="title">{{item.order_sum}} </div>
       <div class="status">{{item.created_date | date}} </div>
-    </li>
-  </ul>
+    </div>
 </div>
