--- a/bm-sys-frontend/src/app/components/modal/modalVersion/add-order-item-modal/add-order-item-modal.component.html
+++ b/bm-sys-frontend/src/app/components/modal/modalVersion/add-order-item-modal/add-order-item-modal.component.html
@@ -13,5 +13,8 @@
     <div class="child" >{{produtPrive}}</div>
 
   </div>
+  <div class="form-comment-container">
+    <input placeholder="Komentarz" formControlName="comment" type="text" matInput />
+  </div>
 </div>
 <button (click)="addOrderItemToList()" mat-button>Dodaj</button>
