--- a/bm-sys-frontend/src/app/components/nav/nav.component.html
+++ b/bm-sys-frontend/src/app/components/nav/nav.component.html
@@ -3,7 +3,6 @@
     Nawigacja
   </div>
   <div class="app-pages">
-    <button mat-button class="button-color" [routerLink]="['add-order']">Dodaj Zamówienie</button>
-    <button mat-button class="button-color" [routerLink]="['order-history']">Histria zamówień</button>
+      Panel- page (admin/user)
   </div>
 </div>
