--- a/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.html
+++ b/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.html
@@ -39,6 +39,11 @@
       <td mat-cell *matCellDef="let element"> {{element.order_amount * mapProductPrice[element.product_id].product_default_price}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="order_comment">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Komentarz </th>
+      <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Akcje </th>
       <td mat-cell *matCellDef="let element">
@@ -52,5 +57,11 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-
+  <div class="test" *ngIf="isBlobExist">
+  <ngx-extended-pdf-viewer [src]="testBlob" useBrowserLocale="true"
+                             [showOpenFileButton]="false"
+                             [showBookmarkButton]="false"
+                             height="100vh"
+                             delayFirstView="100"></ngx-extended-pdf-viewer>
+                             </div>
 </ng-container>
