--- a/bm-sys-frontend/src/app/pages/client-special-offers/client-special-offers.component.html
+++ b/bm-sys-frontend/src/app/pages/client-special-offers/client-special-offers.component.html
@@ -19,7 +19,7 @@
               <div class="child">
                 <select formControlName="productId">
                   <option *ngFor="let product of productList"
-                          [value]="product.id">
+                          [value]="product.product_id">
                           {{product.product_name}}
                   </option>
               </select>
