add mat table, add table like exel, change component place (adders), change pdf create

--- a/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.scss
+++ b/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.scss
@@ -16,6 +16,14 @@
   }
 }
 
+.total-amount-container {
+  display: flex;
+  height: 100px;
+  width: 90%;
+  align-items: center;
+  justify-content: flex-end;
+}
+
 .action-container {
   display: flex;
   justify-content: space-around;
