--- a/bm-sys-frontend/src/app/pages/clients-list/clients-list.component.html
+++ b/bm-sys-frontend/src/app/pages/clients-list/clients-list.component.html
@@ -1,9 +1,21 @@
 <div class="container">
-  <ul>
-    <li *ngFor="let item of clientList" class="child">
-      <div class="title">{{item.client_name}} </div>
-      <div class="address">{{item.client_address}} </div>
-      <div class="phone">{{item.client_number}} </div>
-    </li>
-  </ul>
+  <div class="add-client-component">
+    <app-add-clients></app-add-clients>
+  </div>
+  <table mat-table [dataSource]="clientList" matSort class="mat-elevation-z8">
+    <ng-container matColumnDef="clientName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Klient </th>
+      <td mat-cell *matCellDef="let element"> {{element.client_name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="clientAdres">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Adres </th>
+      <td mat-cell *matCellDef="let element"> {{element.client_address}} </td>
+    </ng-container>
+    <ng-container matColumnDef="clientPhone">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Telefon </th>
+      <td mat-cell *matCellDef="let element"> {{element.client_number}} </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
