--- a/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.html
+++ b/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.html
@@ -29,14 +29,19 @@
       <td mat-cell *matCellDef="let element"> {{element.order_amount}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="order_use_by_date" >
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Data ważności </th>
+      <td mat-cell *matCellDef="let element"> {{element.use_by_date | date: 'dd-MM-yyyy'}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="product_price">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Cena Jednostkowa </th>
-      <td mat-cell *matCellDef="let element"> {{mapProductPrice[element.product_id].product_default_price}}</td>
+      <td mat-cell *matCellDef="let element"> {{mapProductPrice[element.product_id].product_default_price | currency:"GBP"}}</td>
     </ng-container>
 
     <ng-container matColumnDef="order_price">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Suma </th>
-      <td mat-cell *matCellDef="let element"> {{element.order_amount * mapProductPrice[element.product_id].product_default_price}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.order_amount * mapProductPrice[element.product_id].product_default_price | currency:"GBP"}}  </td>
     </ng-container>
 
     <ng-container matColumnDef="order_comment">
@@ -57,6 +62,10 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+  <div class="total-amount-container">
+    total: {{totalOrderAmount | currency:"GBP"}}
+  </div>
   <div class="test" *ngIf="isBlobExist">
   <ngx-extended-pdf-viewer [src]="testBlob" useBrowserLocale="true"
                              [showOpenFileButton]="false"
