--- a/bm-sys-frontend/src/app/pages/ordered-items/ordered-items.component.html
+++ b/bm-sys-frontend/src/app/pages/ordered-items/ordered-items.component.html
@@ -1,9 +1,27 @@
 <div class="wrapper">
-    <div *ngFor="let item of orderedItemsList" class="child">
-      <div class="title">{{clientListMap[item.client_id].client_name}} </div>
-      <div class="title">{{item.product_name}} </div>
-      <div class="title">{{item.order_amount}} </div>
-      <div class="title">{{item.order_sum}} </div>
-      <div class="status">{{item.created_date | date}} </div>
-    </div>
+    <table mat-table [dataSource]="orderedItemsList" matSort class="mat-elevation-z8">
+      <ng-container matColumnDef="clientName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Klient </th>
+        <td mat-cell *matCellDef="let element"> {{clientListMap[element.client_id].client_name}}  </td>
+      </ng-container>
+      <ng-container matColumnDef="productName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Produkt </th>
+        <td mat-cell *matCellDef="let element"> {{element.product_name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="orderAmount">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Waga </th>
+        <td mat-cell *matCellDef="let element"> {{element.order_amount}} </td>
+      </ng-container>
+      <ng-container matColumnDef="orderTotal">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Suma </th>
+        <td mat-cell *matCellDef="let element"> {{element.order_sum}} </td>
+      </ng-container>
+      <ng-container matColumnDef="orderDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
+        <td mat-cell *matCellDef="let element"> {{element.created_date | date}}</td>
+      </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 </div>
