--- a/bm-sys-frontend/src/app/pages/product-list/product-list.component.html
+++ b/bm-sys-frontend/src/app/pages/product-list/product-list.component.html
@@ -1,8 +1,36 @@
 <div class="wrapper">
-  <ul>
-    <li *ngFor="let item of productList" class="child">
-      <div class="title">{{item.product_name}} </div>
-      <div class="address">{{item.product_default_price}} </div>
-    </li>
-  </ul>
+
+  <app-add-product></app-add-product>
+  <div class="test-table">
+    <div class="list-wrapper">
+           <ng-container>
+        <table mat-table [dataSource]="testviewForTable | keyvalue" matSort class="mat-elevation-z8">
+          <ng-container matColumnDef="productName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Produkt </th>
+            <td mat-cell *matCellDef="let element">{{testMapForTable[element.key].product_name}} </td>
+          </ng-container>
+          <ng-container matColumnDef="defaultProductPrice">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Cena </th>
+            <td mat-cell *matCellDef="let element">{{element.value[0].product_default_price | currency:"GBP"}} </td>
+          </ng-container>
+
+          <ng-container *ngFor="let item of clientList">
+            <ng-container matColumnDef={{item.id}} >
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> {{item.client_name}} </th>
+              <td mat-cell *matCellDef="let element">
+                <ng-container *ngIf="testPromoMap[element.key][item.id] != undefined">
+                  {{testPromoMap[element.key][item.id][0].clientprice | currency:"GBP"}}
+                </ng-container>
+                <ng-container *ngIf="testPromoMap[element.key][item.id] == undefined">
+                  -
+                </ng-container>
+                </td>
+            </ng-container>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </ng-container>
+    </div>
+  </div>
 </div>
