--- a/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.html
+++ b/bm-sys-frontend/src/app/pages/edit-order/edit-order.component.html
@@ -25,7 +25,7 @@
     </ng-container>
 
     <ng-container matColumnDef="order_amount" >
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Waga </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Waga (kg)</th>
       <td mat-cell *matCellDef="let element"> {{element.order_amount}} </td>
     </ng-container>
 
